--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </button>
           </li>
           <li>
-            <a class="header__resume btn" href="./public/curriculo.pdf">Currículo</a>
+            <a class="header__resume btn" href="./curriculo.pdf">Currículo</a>
           </li>
         </ul>
         <button aria-label="mobile nav button" class="header__bars">
