--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </button>
           </li>
           <li>
-            <a class="mobile-nav__btn btn" href="#">Currículo</a>
+            <a class="mobile-nav__btn btn" href="./curriculo.pdf">Currículo</a>
           </li>
         </ul>
       </nav>
