--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <meta name="description" content="My Portfolio website" />
     <meta name="keywords" content="web design, html, css, js" />
-    <title>Portfolio Website</title>
+    <title>Bellussi</title>
   </head>
   <body>
     <header class="header container">
