Adiciona email ao botão de contato

--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
           developer e entusiasta de <strong>UI/UX</strong>
           especializado na construção de sites/aplicativos interativos impressionantes com pixel-perfect.
         </p>
-        <a class="hero__btn btn" href="#">Entre em contato</a>
+        <a class="hero__btn btn" href="mailto:enzobellussifam@gmail.com"
+          target="_blank">Entre em contato</a>
       </section>
       <section id="about" class="about container section">
         <div class="about__content">
